--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <title>Landing Page</title>
     </head>
@@ -20,8 +21,45 @@
                 <button class="upper"><a href="#">Sign up</a></button>
             </div>
             <div class="right">
-                <img src=""
+                <img src="./images/hellokitty.jpg" alt="A cartoon cat named Hello Kitty">
             </div>
+        </div>
+        <div class="information">
+            <div class="info-header">Some random information.</div>
+            <div class="container">
+                <div class="illustration">
+                    <img src="./images/hellokitty2.png" alt="A cute cartoon kitty">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="illustration">
+                    <img src="./images/hellokitty2.png" alt="A cute cartoon kitty">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="illustration">
+                    <img src="./images/hellokitty2.png" alt="A cute cartoon kitty">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="illustration">
+                    <img src="./images/hellokitty2.png" alt="A cute cartoon kitty">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="sign">-Thor, God of Thunder</div>
+        </div>
+        <div class="signup">
+            <div class="left">
+                <div class="text">Call to action! It's time!</div>
+                <div class="text">Sign up for our product by clicking that button right over there</div>
+            </div>
+            <div class="right">
+                <button class="lower"><a href="#">Sign up</a></button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="text">Copyright © The Odin Project 2021</div>
         </div>
     </body>
 </html>
