--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="signup">
             <div class="left">
-                <div class="text">Call to action! It's time!</div>
+                <div class="text1">Call to action! It's time!</div>
                 <div class="text">Sign up for our product by clicking that button right over there</div>
             </div>
             <div class="right">
